{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Movement",
            "id": "dabaec97-ff62-4a3c-b667-2892e2f3b728",
            "actions": [
                {
                    "name": "LeftRight",
                    "type": "PassThrough",
                    "id": "63eb44e7-0098-4e3d-bdd4-852a1e3e49fd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "5d33ed49-4bef-46de-8c1b-bbf736902e78",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "b8ea2f48-7176-4a1c-9ccb-cdbc325a1dba",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRight",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "bf14bb0d-b639-45c4-9152-a7541d09d858",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "aa94938e-1790-4a73-be77-e24fd5c8761c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftRight",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "be2b7889-7e62-4239-8779-8851c774946e",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Attack",
            "id": "0b9597ff-42d2-44ae-a9d4-9af855430ac7",
            "actions": [
                {
                    "name": "SwordAttack",
                    "type": "Button",
                    "id": "753b79f5-b3cc-4fa9-8f79-4fb4439dcdbc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5cac2bff-8915-43b8-8983-c5788940bbc8",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwordAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}